# WiChain-The-Wifi-Threat-Detector

./: .gitignore  README.md
backend/: app.py  blockchain.py  oui.txt  pyproject.toml
backend/models/: wifi_classifier.pkl
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/Pages/: ArchitecturePage.jsx  BlockChain.jsx  DatasetSection.jsx  Predict.jsx  ResearchPage.jsx
frontend/src/components/: ArchitectureCompo.jsx  Cursor.jsx  CyberModel.jsx  FixedButton.jsx  Footer.jsx  Home.jsx  MoreInfo.jsx  Navbar.jsx  PageTransition.jsx  RevealParagraph.jsx  ScrollManager.jsx
