[project]
name = "wichain-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "eth-account>=0.13.7",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "joblib>=1.5.1",
    "logging>=0.4.9.6",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "web3>=7.13.0",
]
